1. Add logo, 2. Add background image, 3. Adjusted responsivness to major view ports

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,11 +6,11 @@ body {
   background-size: cover;
 }
 
-body {
+/* body {
   background: linear-gradient(to right, #44a544, #3498db);
   z-index: -6;
 
-}
+} */
 
 .App {
   text-align: center;
